--- a/about.html
+++ b/about.html
@@ -1,17 +1,19 @@
 ---
 layout: about
 title: About
-banner : "assets/images/banners/other.jpg"
+banner: "assets/images/banners/other.jpg"
 ---
 
-## About
-
-# Welcome to Caleb's Personal Page!
+<h2>About</h2>
 
 <p> Hi! Thank you for stopping by. <br>
-My name is Caleb from Nigeria, I'm a C# .Net Developer more focused on backend development <br>
+My name is Caleb, I'm a C# .Net Developer more focused on backend development <br>
 in the past 2years I've been working mostly on web applications and I have used different tools like <br>
 github(Source control and collaboration), SQL Server(Database), .Net Core 3.1 and entitiy frameworkcore(ORM).
+Over the course of my studies at NIIT I worked with Microsoft Server 2012, Cisco networking, SQL Server, Comptia A+,Comptia N+, I also worked with <Hyper-V>
+Desktop deployment tools and VMware. 
+With these tools I aquired the skills in providing technical support to users on Desktop and Network devices, 
+SQL Server Administration, IT Infrastructure management, Desktop Deployment
 </p> 
 
 <p> I'm self-taught and and the journey has been challenging but somehow as I have been collaborating <br>
@@ -26,7 +28,7 @@ I've been curious about a lot of things in IT and this makes me always want to l
 The next step is working towards becoming a Cloud Solution Architect to broaden my scope in cloud technologies
 and to provide the best of my skills to make sure customers are satisfied </p>
 
-### Connect with me
+<h3>Connect with me</h3>
 Please feel free to reach out via any of the most convinient mean for you. <br>
 Send me a mail I'd get this faster <Kalebiotezz@yahoo.com> <br>
 [LinkedIn](https://www.linkedin.com/in/caleb-emmanuel-246555176/). <br>
