--- a/about.html
+++ b/about.html
@@ -30,10 +30,9 @@ and to provide the best of my skills to make sure customers are satisfied </p>
 
 <h3>Connect with me</h3>
 Please feel free to reach out via any of the most convinient mean for you. <br>
-Send me a mail I'd get this faster <Kalebiotezz@yahoo.com> <br>
-<a href="https://www.linkedin.com/in/caleb-emmanuel-246555176/">LinkedIn</a>
-[LinkedIn](https://www.linkedin.com/in/caleb-emmanuel-246555176/). <br>
-[Instagram](https://www.instagram.com/_your_village_boy/) <br>
-[Facebook](https://fb.com/Calebio10) <br>
-[Twitter](https://twitter.com/Caleb08088) <br>
-[GitHub](https://github.com/Calebio) <br>
+Send me a mail I'd get this faster <a href="Kalebiotezz@yahoo.com"> Email</a> <br>
+<a href="https://www.linkedin.com/in/caleb-emmanuel-246555176/">LinkedIn</a> <br>
+<a href="https://www.instagram.com/_your_village_boy/">Instagram</a> <br>
+<a href="https://fb.com/Calebio10">Facebook</a><br>
+<a href="https://twitter.com/Caleb08088">Twitter</a> <br>
+<a href="https://github.com/Calebio">Github</a> <br>
