--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: about
 title: About
-banner: "assets/images/banners/other.jpeg"
+banner: "assets/images/banners/pexels-mohamed-khaled-397998.jpg"
 ---
 
 <h2>About</h2>
