--- a/about.html
+++ b/about.html
@@ -17,16 +17,20 @@ SQL Server Administration, IT Infrastructure management, Desktop Deployment
 </p> 
 
 <p> I'm self-taught and and the journey has been challenging but somehow as I have been collaborating <br>
-with a small team of developers this has made my journey less stressfull and has opened my mind to <br>
-learn a lot of things, I have made backend of web application and have provided support and upgrade <br>
+with a small team of developers. This has made my journey less stressfull and has opened my mind to <br>
+learn a lot of things, I have made backend of a lot of web applications and have provided support and upgrade <br>
 to already existing websites. </P>
 
 <p> I consider myself a life-long learner, eager to keep building on my skills and staying in tune with latest technologies.
 I've been curious about a lot of things in IT and this makes me always want to learn new technologies so I've recently, been moving towards learning cloud technologies </p>
 
-<p> Cloud technologies has been one of the things that fascinates me too, I'm certified as an AWS Cloud Practicioner and I want to advance towards cloud technologies because there's a lot you can achieve with cloud technologies. <br>
-The next step is working towards becoming a Cloud Solution Architect to broaden my scope in cloud technologies
-and to provide the best of my skills to make sure customers are satisfied </p>
+<p> After training for months with theory and hands-on projects, I have recently passed my AWS Solution Architect Associate certification exam <br>
+    Cloud Services fascinates me a too because my IT background is mostly with physical servers and then having the ability to provisions a while IT Infrastructure <br>
+within minutes or hours without upfront cost wow! so I move towards cloud services. And so far it has been a great journey of learning for me.
+</p>
+
+<p> <strong am looking to join a team where I get to learning from more experienced hands while also bringing value to the team with my skills, I'm eager to jump on some real-life 
+ projects very curious to solve problems in the real world production environments as a Solution Architect or Cloud Support Engineer> </strong></p>
 
 <h3>Connect with me</h3>
 Please feel free to reach out via any of the most convinient mean for you. <br>
