--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ within minutes or hours without upfront costs wow! totally a life saver. And so 
 </p>
 
 <strong> I am looking to join a team where I get to learning from more experienced hands while also bringing value to the team with my skills, I'm eager to jump on some real-life 
- projects very curious to solve problems in the real world production environments as a Solution Architect or Cloud Support Engineer> </strong>
+ projects very curious to solve problems in the real world production environments as a Solution Architect or Cloud Support Engineer </strong>
 
 <h3>Connect with me</h3>
 Please feel free to reach out via any of the most convinient mean for you. <br>
