--- a/about.html
+++ b/about.html
@@ -14,10 +14,11 @@ During this 5 years I have worked in vast number of projects.
 
 <h3>CERTIFICATION & LICENSES</h3>
 <p>
-    1. AWS Certified Solutions Architect Associate https://www.credly.com/badges/d13374e1-e412-4c1a-bb28-eccd1bdf859d/linked_in_profile
-    2. AWS Certified Cloud Practitioner  https://www.credly.com/badges/562abbbd-c4f3-4f29-bf16-488425ddf379/linked_in_profile
-    3. Google Cloud Fundamentals for AWS Professionals https://bit.ly/3BDxNqE
-
+    <ol>
+        <li><a href="https://www.credly.com/badges/d13374e1-e412-4c1a-bb28-eccd1bdf859d/linked_in_profile">AWS Certified Solutions Architect Associate </a></li>
+        <li><a href="https://www.credly.com/badges/562abbbd-c4f3-4f29-bf16-488425ddf379/linked_in_profile">AWS Certified Cloud Practitioner</a></li>
+        <li><a href="https://bit.ly/3BDxNqE"></a>Google Cloud Fundamentals for AWS Professionals</li>
+    </ol>
 </p>
 
 <p>
@@ -27,21 +28,25 @@ Then I worked with customers by providing technical support to users on Desktop 
 SQL Server Administration, IT Infrastructure management. 
 
 <h3>IT Infrastructure projects</h3>
-1.  I deployed a Windows Server 2012 R2 on premises with Active Directory, DNS, TCP/IP and DHCP configured to ensure Identity management, ip address resolution to the domain name, <br/>
-and ip address leasing. <br/>
-2. I also made a server upgrade from Windows Server 2012 R2 to Windows server 2019 and the process was first simulated on a standby machine before implementing the upgrade on the production server.<br/>
-3. I provided both on-site and remote technical support for customers on their Desktop and Networking while maintaining good security and design practices.
+<ol>
+    <li>I deployed a Windows Server 2012 R2 on premises with Active Directory, DNS, TCP/IP and DHCP configured to ensure Identity management, ip address resolution to the domain name, <br/>
+        and ip address leasing.</li>
+        <li>I also made a server upgrade from Windows Server 2012 R2 to Windows server 2019 and the process was first simulated on a standby machine before implementing the upgrade on the production server.</li>
+        <li>I provided both on-site and remote technical support for customers on their Desktop and Networking while maintaining good security and design practices.</li>
+</ol>
 
 </p>
 
-<h3>>.Net Developer|Tech Support - Team Lead</h3>
+<h3>.Net Developer|Tech Support - Team Lead</h3>
 <p> In the recent 3 years, I picked up coding and I currently work as a .Net Developer | Network Engineer where I have built projects with C# .Net Core, SQL Server, Visual Studio, Github<br>
     As a backend developer I have overhauled and provided maintenance for 20+ .NET web applications, using MVC, C# .NET Framework, .NET Core, Entity Framework, and SQL Server for database <br/>
     while contributing to a secure code base on GitHub. <br/>
 
     <h3> Projects .Net Developer</h3>
-    1. https://autoblazemotors.com/ Car Sales and Rental Services
-    2. https://github.com/Calebio/WebApi5 REST API built with .Net 5, MongoDB, Docker and Kubernetes
+    <ul>
+        <li><a href="https://autoblazemotors.com/">https://autoblazemotors.com/ Car Sales and Rentals</a></li>
+        <li><a href="https://github.com/Calebio/WebApi5">https://github.com/Calebio/WebApi5 REST API built with .Net 5, MongoDB, Docker and Kubernetes</a></li>
+    </ul>
 
 I might not show too much because I'm under an NDA but these a just a few of the projects I have worked on over the years.
 
@@ -58,8 +63,6 @@ I might not show too much because I'm under an NDA but these a just a few of the
     <h3>Cloud Projects</h3>
     1. Single tier VPC with a Development server and Docker pre-installed: https://github.com/Calebio/Terraform
     2. Multi-Tier VPC configured public and private subnets with internet gateway where necessary: https://github.com/Calebio/3TireArchitecture/tree/main/multiTierProj
-
-
 
     <h3>Skills and tools</h3>
 
