--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@ A little summary on my journey so far. In this 5 years, I have worked in vast nu
     <ol>
         <li>
             <a href="https://www.credly.com/badges/d13374e1-e412-4c1a-bb28-eccd1bdf859d/linked_in_profile">
-            <img src="/assets/images/banners/AWS-SA-Badge.png"style="width: 300px;;height: 200px;;"></a></li>
+            <img src="/assets/images/banners/AWS-SA-Badge.png"style="width: 300px;;height: 300px;;"></a></li>
         <li><a href="https://www.credly.com/badges/562abbbd-c4f3-4f29-bf16-488425ddf379/linked_in_profile">
-            <img src="/assets/images/banners/AWS-PRACTITIONER-BADGE.jpg"></a></li>
+            <img src="/assets/images/banners/AWS-PRACTITIONER-BADGE.jpg "style="width: 300px; height: 300px;;"></a></li>
         <li><a href="https://bit.ly/3BDxNqE">Google Cloud Fundamentals for AWS Professionals</a></li>
     </ol>
 </p>
