--- a/about.html
+++ b/about.html
@@ -14,18 +14,18 @@ A little summary on my journey so far. In this 5 years, I have worked in vast nu
 
 <h3>CERTIFICATION & LICENSES</h3>
 <p>
-    <ol>
-        <li>
-            <a href="https://www.credly.com/badges/d13374e1-e412-4c1a-bb28-eccd1bdf859d/linked_in_profile">
+    
+        <a href="https://www.credly.com/badges/d13374e1-e412-4c1a-bb28-eccd1bdf859d/linked_in_profile">
             <img src="/assets/images/banners/AWS-SA-Badge.png" style="width:auto;; height:auto"></a>
-        </li>
-        <li><a href="https://www.credly.com/badges/562abbbd-c4f3-4f29-bf16-488425ddf379/linked_in_profile">
+
+        <a href="https://www.credly.com/badges/562abbbd-c4f3-4f29-bf16-488425ddf379/linked_in_profile">
             <img src="/assets/images/banners/AWS-PRACTITIONER-BADGE.jpg "></a>
-        </li>
-        <li><a href="https://bit.ly/3BDxNqE">
+
+
+        <a href="https://bit.ly/3BDxNqE">
             <img src="/assets/images/banners/GCP-BADGE.png"></a>
-        </li>
-    </ol>
+        
+
 </p>
 
 <p>
