--- a/about.html
+++ b/about.html
@@ -16,14 +16,20 @@ A little summary on my journey so far. In this 5 years, I have worked in vast nu
 <p>
     
         <a href="https://www.credly.com/badges/d13374e1-e412-4c1a-bb28-eccd1bdf859d/linked_in_profile">
-            <img src="/assets/images/banners/AWS-SA-Badge.png" style="width: 100px;; height: 100px;"></a>
+            <img src="/assets/images/banners/AWS-SA-Badge.png" style="width: 150px;; height: 150px;">
+        AWS Solutions Architect Associate</a>
+
+        <br/>
+
 
         <a href="https://www.credly.com/badges/562abbbd-c4f3-4f29-bf16-488425ddf379/linked_in_profile">
-            <img src="/assets/images/banners/AWS-PRACTITIONER-BADGE.jpg " style="width: 100px; height: 100px;;"></a>
+            <img src="/assets/images/banners/AWS-PRACTITIONER-BADGE.jpg " style="width: 150px; height: 150px;;">AWS Cloud Practitioner</a>
+
+        <br/>
 
 
         <a href="https://bit.ly/3BDxNqE">
-            <img src="/assets/images/banners/GCP-BADGE.png" style="height: 100px; width: 100px;"></a>
+            <img src="/assets/images/banners/GCP-BADGE.png" style="height: 1500px; width: 150px;"></a>
         
 
 </p>
