--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@ A little summary on my journey so far. In this 5 years, I have worked in vast nu
 
 
         <a href="https://bit.ly/3BDxNqE">
-            <img src="/assets/images/banners/GCP-BADGE.png" style="height: 1500px; width: 150px;"></a>
-        
+            <img src="/assets/images/banners/GCP-BADGE.png" style="width: 150px; height: 1500px;">Google Cloud Fundamentals for AWS Professionals</a>
 
+        <br/>
 </p>
 
 <p>
