--- a/about.html
+++ b/about.html
@@ -68,11 +68,11 @@ I might not show too much because I'm under an NDA but these a just a few of the
 
 
 <h3>Cloud Engineer</h3>
-<p> I have always been curious about cloud technologies so In parallel with work, I have been studied for the AWS Solutions Architect Associate and got certified.<br/>
-    This my experence and background makes me a more complete Cloud Engineer.<br/>
+<p> I have always been curious about cloud technologies so In parallel with work, I studied for the AWS Solutions Architect Associate and got certified.<br/>
+    This my experience and background makes me a more complete Cloud Engineer.<br/>
 
     After having trained in the AWS Cloud, I combined my previous skills with the newly acquired ones and built projects with Terraform, AWS, and then explored other cloud platforms like GCP.
-    Furthermore, I acquired more hands-on experience in building VCP on Google cloud, DevOps CI/CD pipelines on AWS with CodePipeline, CodeBuild and GitHub. 
+    Furthermore, I acquired more hands-on experience in building VPC on Google cloud, DevOps CI/CD pipelines on AWS with CodePipeline, CodeBuild and GitHub. 
      
     <h3>Cloud Projects</h3>
     <ul>
